# hooman

./: .gitignore  docker-compose.yml
backend/: .gitignore  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  server.ts
backend/src/agents/: AudioAgent.ts  DocumentAgent.ts  ImageAgent.ts  RouterAgent.ts  VideoAgent.ts
backend/src/config/: database.ts
backend/src/controllers/: analyticsController.ts  authController.ts  queryController.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/models/: Query.ts  User.ts  agent.ts  upload.ts
backend/src/routes/: auth.ts  queryRoutes.ts
backend/src/services/: AgentOrchestrator.ts  CrewAIOrchestrator.ts  MCPServerAdapter.ts  (+1 more)
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/context/: session-provider.tsx
frontend/hooks/: useAuth.ts  useMediaRecorder.ts  useRecordingEvents.ts  useTheme.ts
frontend/lib/: auth.ts
mcp_backend/: .gitignore  README.md  pyproject.toml  requirements.txt
mcp_backend/src/: __init__.py  crew.py  main.py  query_data.py  run_servers.py  test_mcp_servers.py
mcp_backend/src/agents/: audio_agent.py  document_agent.py  image_agent.py  video_agent.py
mcp_backend/src/config/: agents.yaml  tasks.yaml
mcp_backend/src/ingestor/: image_ingestor.py  ingestor.py
mcp_backend/src/pixetable/: imagedb.py
mcp_backend/src/queries/: queries.py
mcp_backend/src/server/: audio_mcp_server.py  docs_mcp_server.py  image_mcp_server.py  video_mcp_server.py
mcp_backend/src/tools/: __init__.py  custom_tool.py
(+53 files in other folders)
